// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DimensionsComponent should create view only for hgv with populated data 1`] = `
<vtm-dimensions
  activeRecord={[Function Object]}
>
  <table
    class="govuk-table table-details"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Length (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-length"
        >
           100 
        </td>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Width (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-width"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Front axle to rear axle (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-frontAxleToRearAxle"
        >
           450 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      
      
      
      
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
          id="test-axleSpacing-axles-0"
        >
           Axle 1 to  (mm) 
        </th>
        <td
          class="govuk-table__cell"
          id="test-axleSpacing-value-0"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
          id="test-axleSpacing-axles-1"
        >
           Axle 2 to  (mm) 
        </th>
        <td
          class="govuk-table__cell"
          id="test-axleSpacing-value-1"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
          id="test-axleSpacing-axles-2"
        >
           Axle 3 to  (mm) 
        </th>
        <td
          class="govuk-table__cell"
          id="test-axleSpacing-value-2"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Minimum (mm)
        </td>
        <td
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Maximum (mm)
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
           Front of vehicle to 5th wheel coupling 
        </th>
        <td
          class="govuk-table__cell"
          id="test-frontAxleTo5thWheelCouplingMin"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
          id="test-frontAxleTo5thWheelCouplingMax"
        >
           150 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Front axle to 5th wheel
        </th>
        <td
          class="govuk-table__cell"
          id="test-frontAxleTo5thWheelMin"
        >
           456 
        </td>
        <td
          class="govuk-table__cell"
          id="test-frontAxleTo5thWheelMax"
        >
           660 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      
    </tbody>
  </table>
</vtm-dimensions>
`;

exports[`DimensionsComponent should create view only for other vehicles with populated data 1`] = `
<vtm-dimensions
  activeRecord={[Function Object]}
>
  <table
    class="govuk-table table-details"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Length (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-length"
        >
           100 
        </td>
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
        <th
          class="govuk-table__cell"
        />
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Width (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-width"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Height (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-height"
        >
           100 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__cell govuk-!-font-weight-bold"
        >
          Front axle to rear axle (mm)
        </th>
        <td
          class="govuk-table__cell"
          id="test-frontAxleToRearAxle"
        >
           450 
        </td>
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
        <td
          class="govuk-table__cell"
        />
      </tr>
      
      
      
      
      
      
      
      
    </tbody>
  </table>
</vtm-dimensions>
`;
